tests/paczka1/small_fuzzy/55935607.err
Error in line 3: 50lTwukYW S388 46,2
Error in line 6: YpN5NeF S327 44,1
Error in line 7: 50lTwukYW S327 51,7
Error in line 10: ydQAVWXq S388 49,3
